--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,17 @@
 	display:flex;
 }
 .card-1{
-	
+	text-align:center;
 }
 .img-src{
 	height="600px";
-	width="900";
+	width="800";
 	object-fit:cover;
+}
+#button{
+	padding:8px;
+	margin:8px;
+	background-color:red;
+	color:white;
+	border-radius:1px;
 }
